# NoseCheckAI

./: .dockerignore  .gitignore  .renderignore  DEPLOYMENT_GUIDE.md  Dockerfile  LIMITATIONS.md  README.md  config.py  pyproject.toml  render.yaml  requirements-production.txt  run_server.py  wsgi.py
data/calibration_models/: .gitkeep  metadata.csv
data/ct_validation/: README_DATA.md  clinical_labels.csv  ct_ground_truth.csv
docs/: 3D_MODEL_CALIBRATION_PROCEDURE.md  3D_MODEL_CALIBRATION_PROTOCOL.md  3D_PRINTING_GUIDE.md  ADAPTIVE_SCORING.md  ALGORITHM_CALIBRATION_LOG.md  CT_SCAN_VALIDATION_PROCEDURE.md  CT_VALIDATION_GUIDE.md  DEVELOPMENT_GUIDE.md  PHOTO_GUIDELINES.md  PROJECT_NOTES.md  SCORING_RATIONALE.md  SMART_CPAP_CONCEPT.md  USER_GUIDE.md
scripts/: calibration_workflow.py  download_model.py  generate_calibration_procedure_pdf.py  generate_ct_validation_pdf.py  generate_methodology_pdf.py  prepare_3d_calibration.py  retrain_ml_scorer.py  validate_calibration.py  validate_ct_correlation.py  visualize_landmarks.py
src/: __init__.py  cli.py  wsgi.py
src/analysis/: __init__.py  statistics.py  validation.py  visualizations.py
src/app/: __init__.py  __main__.py
src/data_management/: __init__.py
src/image_processing/: __init__.py  image_loader.py  preprocessor.py
src/landmark_detection/: __init__.py  detector.py  stable_detector.py
src/measurement/: __init__.py  angle_detection.py  asymmetry_calculator.py  contour_analyzer.py  geometry_utils.py
src/questionnaire/: __init__.py  questionnaire.py
src/scoring/: __init__.py  ml_score_calculator.py  score_calculator.py
static/: style.css
templates/: base.html  index.html  questionnaire.html  result.html  upload.html  validation_empty.html  validation_report.html
